fix(about): align the cards correctly

--- a/about/style.css
+++ b/about/style.css
@@ -12,5 +12,14 @@
 }
 
 #about-cards {
-    text-align: center;
+    display: flex;
+    
+    justify-content: center;
+    align-items: center;
+
+    flex-wrap: wrap;
+}
+
+.about-card {
+    margin: 0px 10px 0px 10pxw;
 }
